test/files/pos/t7232f/D.java

public class D {
    public void notok() { }
}
