test/files/neg/t10260/ID.java
public interface ID {
    void foo(D a);
}
